--- a/test-cases.yml
+++ b/test-cases.yml
@@ -250,6 +250,51 @@
     Отображается всплывающее окно об успешном оформлении заказа "Order placed successfully" с информацией о сделанном заказе
 
 - summary: |
+    Проверка навигации по страницам каталога
+  requirement: |
+    При просмотре каталога товаров имеется возможность перейти на следующую страницу с товарами
+  prerequisites:
+    Открыта страница магазина https://hexlet-products-store.vercel.app/
+  test-data: |
+    empty
+  steps:
+    - Открыть каталог
+    - Нажать кнопку "next"
+    - Нажать кнопку "previous"
+  expected-result: |
+    При нажатии кнопки "next" должна показаться следующая страница каталога, а при нажатии кнопки "previous" должна показаться предыдущая страница каталога
+
+- summary: |
+    Проверка отображения товаров по хештегу
+  requirement: |
+    Сайт должен должен отображать товары соответствующие хештегу при взаимодействии с ним
+  prerequisites: |
+    Открыта страница магазина с товаром https://hexlet-products-store.vercel.app/products/10
+  test-data: |
+    Товар = Gucci Bloom
+    Хештег = #fragrances
+  steps:
+    - Ввести в строке поиска товаров "Gucci Bloom"
+    - Выбрать карточку товара "Gucci Bloom"
+    - Перейти по хештегу #fragrances
+  expected-result: |
+    Произошел переход по хештегу, сайт отображает товары связанные с хештегом #fragrances
+
+- summary: |
+    Проверка фильтрации товаров с отрицательным диапазоном цены
+  requirement: |
+    Сайт должен автоматически предотврашать или не давать пользователю возможность фильтрации цен с отрицательным значением 
+  prerequisites: |
+    Открыта страница магазина https://hexlet-products-store.vercel.app/
+  test-data: |
+    empty
+  steps:
+    - Ввести отрицательное значение в поле "From"
+    - Ввести отрицательное значение в поле "To"
+  expected-result: |
+    Не удалось ввести отрицательное значение в фильтр цен. Фильрация не срабатывает
+
+- summary: |
     Проверка адаптивности сайта
   requirement: |
     Сайт должен быть доступен на различных устройствах
