--- a/test-cases.yml
+++ b/test-cases.yml
@@ -366,3 +366,16 @@
     - Выбираем язык "English" из выпадающего меню
   expected-result: |
     Интерфейс и элементы сайта отображаются корректно на английском языке, а также название и описание в карточках товаров
+    
+- summary: |
+   Проверка оплаты заказа на сайте
+  requirement: |
+    Пользователь должен иметь возможность оплатить заказ 
+  prerequisites: |
+    Открыта страница магазина https://hexlet-products-store.vercel.app/cart в корзине есть товары
+  test-data: |
+    empty
+  steps:
+    - нажимаем "Checkout"
+  expected-result: |
+    При нажатии кнопки "Checkout" появляется страница с возможностю оплаты заказа
