--- a/bugreports.yml
+++ b/bugreports.yml
@@ -14,7 +14,7 @@
     Выводится информация "Ничего не найдено"
 
 - summary: |
-    На русском языке название и описание товара не переводится на русский, цена остается в $ 
+    На русском языке название и описание товара не переводится на русский
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
@@ -22,18 +22,6 @@
     Зайти на сайт https://hexlet-products-store.vercel.app
     В навигационной панели выбрать русский язык
   expected-result: |
-    На главной странице сайта должен отображаться перечень товаров, описание каждого из них на русском языке, цена в рублях
+    На главной странице сайта должен отображаться перечень товаров, описание каждого из них на русском языке
   actual-result: |
-    Описание товаров осталось на английском, цена в долларах
-
-- summary: |
-    Нет возможности зарегистрировать пользователя 
-  environment: |
-    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
-    ОС Windows 10 
-  steps-to-reproduce: |
-    Зайти на сайт https://hexlet-products-store.vercel.app
-  expected-result: |
-    На главной странице сайта должно быть окно с вводом логина и пароля для входа под учеткой пользователя / регистрации
-  actual-result: |
-    Нет такого функциоанала 
+    Описание товаров осталось на английском
