--- a/test-cases.yml
+++ b/test-cases.yml
@@ -27,9 +27,9 @@
     Пользователь должен увидеть интресующий его продукт
 
 - summary: |
-    Проверка фильтрации каталога товаров по категории
+    Проверка фильтрации каталога товаров по категории. 
   requirement: |
-    При выборе определенной категории товара, сайт отображает товары, относящиеся к выбранной категории
+    Пользователь должен иметь возможность искать товары по ключевому слову или категории
   prerequisites:
     Открыта страница магазина https://hexlet-products-store.vercel.app/
   test-data: |
@@ -70,7 +70,7 @@
 - summary: |
    Проверка поиска товаров через фильтр по наличию
   requirement: |
-   Пользователь должен иметь возможность фильтровать товары по наличию
+   Пользователь должен иметь возможность фильтровать товары
   prerequisites: |
     открыта страница с товарами, язык сайта английский, Выбрана категория "groceries"
   test-data: |
@@ -83,7 +83,7 @@
 - summary: |
     Проверка фильтрации по бренду
   requirement: |
-    При выборе определенного бреда товара, сайт отображает товары, только относящиеся к указанному бренду
+    Пользователь должен иметь возможность фильтровать товары
   prerequisites:
     Открыта страница магазина https://hexlet-products-store.vercel.app/
     Товар с указанными параметрами имеется в наличии
@@ -97,7 +97,7 @@
 - summary: |
     Проверка фильтрации по нескольким брендам
   requirement: |
-    При выборе нескольких брендов, сайт отображает товары, относящиеся к указанным брендам
+    Пользователь должен иметь возможность фильтровать товары
   prerequisites:
     Открыта страница магазина https://hexlet-products-store.vercel.app/
     Товары с указанными параметрами имеются в наличии
@@ -121,12 +121,12 @@
   steps:
    - Открыть страницу с товарами https://hexlet-products-store.vercel.app/ и нажать на товар
   expected-result: |
-    Отображается карточка товара с подробным описанием товара
+    Отображается карточка товара с фото и подробным описанием товара
 
 - summary: |
     Проверка возможности добавления товара в корзину с каталога
   requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину с каталога товаров (не проваливаясь в карточку товара) и просматривать содержимое корзины
+    Пользователь должен иметь возможность добавлять товары в корзину и продолжать выбирать товары в каталоге
   prerequisites: |
     открыта страница с товарами https://hexlet-products-store.vercel.app/, язык сайта английский
   test-data: |
@@ -139,7 +139,7 @@
 - summary: |
     Проверка возможности добавления товара в корзину с карточки товара
   requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину находясь в карточке товара и просматривать содержимое корзины
+    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
   prerequisites: |
     открыта страница с товарами https://hexlet-products-store.vercel.app/products/5, язык сайта английский
   test-data: |
@@ -152,7 +152,7 @@
 - summary: |
     Проверка возможности уменьшения товара в корзине
   requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину, изменять количество содержимого корзины и просматривать содержимое корзины
+    Пользователь должен иметь возможность изменять количество содержимого корзины и просматривать содержимое корзины
   prerequisites: |
     открыта корзина пользователя https://hexlet-products-store.vercel.app/cart, добалены товары в корзину 
   test-data: 
@@ -165,20 +165,20 @@
 - summary: |
     Проверка возможности добавления одинаковых товаров в корзину
   requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину, изменять количество содержимого корзины и просматривать содержимое корзины
+    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
   prerequisites: |
-    открыта корзина пользователя https://hexlet-products-store.vercel.app/cart, добален товар в корзину 
+    открыта страница товара https://hexlet-products-store.vercel.app/products/1
   test-data: 
     from 0 to 3
   steps:
-  - на странице с товарами нажать "add to cart" три раза у выбранного товара
+  - на странице с товаром нажать "add to cart" три раза у выбранного товара
   expected-result: |
-   товар добавляется в корзину и меняется количество товара
+   товар добавляется в корзину в кол-ве 3 шт
 
 - summary: |
     Проверка возможности добавления разных товаров в корзину
   requirement: |
-    Пользователь должен иметь возможность добавлять товары в корзину, изменять количество содержимого корзины и просматривать содержимое корзины
+    Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины
   prerequisites: |
     открыта корзина пользователя https://hexlet-products-store.vercel.app/cart, добалены товары в корзину 
   test-data: 
@@ -186,12 +186,12 @@
   steps:
   - в корзине напротив товаров нажать "add to cart"
   expected-result: |
-   В корзине появятся выбранные товары
+   В корзине увеличится кол-во каждого товара
 
 - summary: |
     Проверка отчистки определенного товара из корзины 
   requirement: |
-    При добавлении товара в корзину, имеется возможность удалить товар из корзины 
+    Пользователь должен иметь возможность удалять содержимое корзины
   prerequisites:
     Открыта страница магазина https://hexlet-products-store.vercel.app/
     Товар = Dior
@@ -200,14 +200,14 @@
     - Add to cart Dior
     - Add to cart Gucci
     - Перейти в корзину 
-    - В строке "Gucci"  нажать "delite"   
+    - В строке "Gucci"  нажать "delete"   
   expected-result: |
     В корзине остался товар Dior 
   
 - summary: |
     Проверка отчистки всего списка корзины 
   requirement: |
-    При добавлении нескольких товаров, имеется возможность удалить весь список товаров из корзины одним нажатием
+    Пользователь должен иметь возможность удалять содержимое корзины
   prerequisites:
     Открыта страница магазина https://hexlet-products-store.vercel.app/
   test-data: |
@@ -222,13 +222,12 @@
 - summary: |
     Проверка возврата из корзины в каталог магазина
   requirement: |
-    При переходе в корзину, имеется возможность вернуться на главную страницу магазина
+    Пользователь должен иметь возможность из корзины вернуться на главную страницу
   prerequisites:
     Открыта страница магазина https://hexlet-products-store.vercel.app/cart
   test-data: |
     empty
   steps:
-    - Перейти в корзину
     - Нажать "Continue shopping" 
   expected-result: |
     После нажатия "Continue shopping" отображается главная страница магазина 
@@ -236,9 +235,9 @@
 - summary: |
     Проверка успешного оформления заказа 
   requirement: |
-    При добавлении товара в корзину, имеется возможность оформления заказа
+    Пользователь имеет возможность оформить заказ из корзины
   prerequisites:
-    Открыта страница магазина https://hexlet-products-store.vercel.app/cart
+    Открыта страница магазина https://hexlet-products-store.vercel.app
   test-data: |
     Товар = Dior
   steps:
@@ -252,9 +251,9 @@
 - summary: |
     Проверка навигации по страницам каталога
   requirement: |
-    При просмотре каталога товаров имеется возможность перейти на следующую страницу с товарами
+    Пользователь может перемещаться по страницам каталога сайта
   prerequisites:
-    Открыта страница магазина https://hexlet-products-store.vercel.app/
+    Открыта страница магазина https://hexlet-products-store.vercel.app
   test-data: |
     empty
   steps:
@@ -267,7 +266,7 @@
 - summary: |
     Проверка отображения товаров по хештегу
   requirement: |
-    Сайт должен должен отображать товары соответствующие хештегу при взаимодействии с ним
+    Пользователь должен иметь возможность фильтровать товары
   prerequisites: |
     Открыта страница магазина с товаром https://hexlet-products-store.vercel.app/products/10
   test-data: |
@@ -283,9 +282,9 @@
 - summary: |
     Проверка фильтрации товаров с отрицательным диапазоном цены
   requirement: |
-    Сайт должен автоматически предотврашать или не давать пользователю возможность фильтрации цен с отрицательным значением 
+    Сайт должен автоматически предотврашать возможность фильтрации цен с отрицательным значением
   prerequisites: |
-    Открыта страница магазина https://hexlet-products-store.vercel.app/
+    Открыта страница магазина https://hexlet-products-store.vercel.app
   test-data: |
     empty
   steps:
@@ -299,7 +298,7 @@
   requirement: |
     Сайт должен быть доступен на различных устройствах
   prerequisites: |
-    Проверка адаптивности сайта на устройствах Iphone, Android, Ipad. Открыта страница сайта
+    Проверка адаптивности сайта на устройствах Iphone, Android, Ipad. Открыта страница сайта https://hexlet-products-store.vercel.app/
   test-data: 
     empty
   steps:
@@ -315,7 +314,7 @@
   requirement: |
     Сайт нужно разработать с учетом удобства использования и оптимизировать для скорости работы
   prerequisites: |
-    Открыта страница сайта https://hexlet-products-store.vercel.app/
+    Открыта страница сайта https://hexlet-products-store.vercel.app
   test-data: 
     empty
   steps:
@@ -331,7 +330,7 @@
   requirement: |
     Сайт должен быть доступен и корректно отображаться в различных браузерах
   prerequisites: |
-    Наличие различных браузеров. Открыта страница сайта https://hexlet-products-store.vercel.app/
+    Наличие различных браузеров. Открыта страница сайта https://hexlet-products-store.vercel.app
   test-data:  
    empty
   steps:
@@ -342,9 +341,9 @@
 - summary: |
    Проверка Мультиязычности сайта. Отображение на русском языке
   requirement: |
-    Сайт нужно разработать с учетом удобства использования 
+   Сайт должен функционировать на русском и английйском языках
   prerequisites: |
-    Открыта страница магазина https://hexlet-products-store.vercel.app/, выбран английсикй язык
+    Открыта страница магазина https://hexlet-products-store.vercel.app, выбран английсикй язык
   test-data: |
     empty
   steps:
@@ -356,9 +355,9 @@
 - summary: |
    Проверка Мультиязычности сайта. Отображение на английском языке
   requirement: |
-    Сайт нужно разработать с учетом удобства использования 
+   Сайт должен функционировать на русском и английйском языках
   prerequisites: |
-    Открыта страница магазина https://hexlet-products-store.vercel.app/, выбран русский язык
+    Открыта страница магазина https://hexlet-products-store.vercel.app, выбран русский язык
   test-data: |
     empty
   steps:
@@ -376,6 +375,71 @@
   test-data: |
     empty
   steps:
-    - нажимаем "Checkout"
+    - нажимаем "Payment"
   expected-result: |
-    При нажатии кнопки "Checkout" появляется страница с возможностю оплаты заказа
+    При нажатии кнопки "Payment" появляется страница с возможностю оплаты заказа
+
+- summary: |
+   Проверка информации о товаре в каталоге
+  requirement: |
+   На странице товара и в каталоге нужно выводить данные о товаре (название, рейтинг, цена со скидкой и без нее) 
+  prerequisites: |
+    Открыта страница магазина https://hexlet-products-store.vercel.app 
+  test-data: |
+    empty
+  steps:
+    empty
+  expected-result: |
+   На странице каталога отображается перечень товаров, информацией о каждом из них. Рейтинг, цена, цена со скидкой
+
+- summary: |
+   Проверка информации о товаре в карточке товара
+  requirement: |
+   На странице товара и в каталоге нужно выводить данные о товаре (название, рейтинг, цена со скидкой и без нее) 
+  prerequisites: |
+    Открыта страница с товаром https://hexlet-products-store.vercel.app/products/2
+  test-data: |
+    empty
+  steps:
+    empty
+  expected-result: |
+   На странице с товаром отображается информация о нем. Рейтинг, цена, цена со скидкой
+
+- summary: |
+   Изменение кол-ва товара на странице каталога
+  requirement: |
+   При добавлении товара в корзину должен изменяться остаток товара в магазине
+  prerequisites: |
+    Открыта страница сайта https://hexlet-products-store.vercel.app
+  test-data: |
+    товар=Red Lipstick текущий остаток 68 шт
+  steps:
+    нажать Add to cart один раз
+  expected-result: |
+   Кол-во товара изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
+
+- summary: |
+   Изменение кол-ва товара в карточке товара
+  requirement: |
+   При добавлении товара в корзину должен изменяться остаток товара в магазине
+  prerequisites: |
+    Открыта страница с товаром https://hexlet-products-store.vercel.app/products/4
+  test-data: |
+    товар=Red Lipstick текущий остаток 68 шт
+  steps:
+    нажать Add to cart один раз
+  expected-result: |
+   Кол-во товара изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
+
+- summary: |
+   Редактирование пользователем инфорации о товаре в карточке продукта
+  requirement: |
+   Пользователь не должен иметь возможность редактировать описание товара
+  prerequisites: |
+    Открыта страница с товаром https://hexlet-products-store.vercel.app/products/4
+  test-data: |
+    товар=Red Lipstick 
+  steps:
+    В Description попробовать изменить/удалить текст
+  expected-result: |
+   Сайт не отзывается на манипуляции пользователя
