--- a/test-cases.yml
+++ b/test-cases.yml
@@ -280,7 +280,7 @@
     Произошел переход по хештегу, сайт отображает товары связанные с хештегом #fragrances
 
 - summary: |
-    Проверка фильтрации товаров с отрицательным диапазоном цены
+    Проверка фильтрации товаров с отрицательной ценой
   requirement: |
     Сайт должен автоматически предотврашать возможность фильтрации цен с отрицательным значением
   prerequisites: |
@@ -289,7 +289,7 @@
     empty
   steps:
     - Ввести отрицательное значение в поле "From"
-    - Ввести отрицательное значение в поле "To"
+    - Ввести положительное значение в поле "To"
   expected-result: |
     Не удалось ввести отрицательное значение в фильтр цен. Фильрация не срабатывает
 
@@ -432,7 +432,7 @@
    Кол-во товара изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
 
 - summary: |
-   Редактирование пользователем инфорации о товаре в карточке продукта
+   Редактирование пользователем информации о товаре в карточке продукта
   requirement: |
    Пользователь не должен иметь возможность редактировать описание товара
   prerequisites: |
