--- a/test-cases.yml
+++ b/test-cases.yml
@@ -375,9 +375,10 @@
   test-data: |
     empty
   steps:
-    - нажимаем "Payment"
+    - нажимаем "Checkout"
+    - В появившемся окне об успешном оформлении заказа нажимаем "Payment"
   expected-result: |
-    При нажатии кнопки "Payment" появляется страница с возможностю оплаты заказа
+    При нажатии кнопки "Payment" пользователь попадает в окно оплаты заказа
 
 - summary: |
    Проверка информации о товаре в каталоге
@@ -393,7 +394,7 @@
    На странице каталога отображается перечень товаров, информацией о каждом из них. Рейтинг, цена, цена со скидкой
 
 - summary: |
-   Проверка информации о товаре в карточке товара
+   Проверка информации в карточке товара
   requirement: |
    На странице товара и в каталоге нужно выводить данные о товаре (название, рейтинг, цена со скидкой и без нее) 
   prerequisites: |
@@ -419,7 +420,7 @@
    Кол-во товара изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
 
 - summary: |
-   Изменение кол-ва товара в карточке товара
+   Изменение кол-ва в карточке товара
   requirement: |
    При добавлении товара в корзину должен изменяться остаток товара в магазине
   prerequisites: |
@@ -432,7 +433,7 @@
    Кол-во товара изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
 
 - summary: |
-   Редактирование пользователем информации о товаре в карточке продукта
+   Неудачная попытка пользователя редактировать информацию о товаре в карточке продукта
   requirement: |
    Пользователь не должен иметь возможность редактировать описание товара
   prerequisites: |
