--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,52 +1,128 @@
 ---
 - summary: |
-    Проверка поиска товара в строке поиска
+    Проверка поиска товара в строке поиска по бренду
   status: pass
 
 - summary: |
-    Проверка поиска товара в строке поиска
+    Проверка поиска товара в строке поиска по общему наименованию
   status: fail
 
 - summary: |
-    Проверка поиска товара через выбор категории 
+    Проверка фильтрации каталога товаров по категории 
   status: pass
 
 - summary: |
-    Проверка поиска товаров через фильтр
+    Проверка поиска товара через выбор категории и строку поиска
   status: pass
 
 - summary: |
-    Проверка возможности просмотра информации о товаре
+    Проверка поиска товаров через фильтр по цене
   status: pass
 
 - summary: |
-    Проверка возможности добавления товара в корзину
+    Проверка поиска товаров через фильтр по наличию
   status: pass  
 
 - summary: |
-    Проверка возможности удаления товара из корзины
+    Проверка фильтрации по бренду
   status: pass  
 
 - summary: |
-    Проверка возможности уменьшения товара в корзине
+    Проверка фильтрации по нескольким брендам
   status: pass    
 
 - summary: |
-    Проверка адаптивности сайта
+    Проверка возможности просмотра информации о товаре
   status: pass 
 
 - summary: |
-    Проверка скоости загрузки страницы сайта
+    Проверка возможности добавления товара в корзину с каталога
   status: pass 
 
 - summary: |
-    Проверка кроссбраузерности сайта
+    Проверка возможности добавления товара в корзину с карточки товара
   status: pass 
 
 - summary: |
-   Проверка Мультиязычности сайта
+   Проверка возможности уменьшения товара в корзине
   status: fail 
 
 - summary: |
-    Проверка успешной регистрации пользователя
+    Проверка возможности добавления одинаковых товаров в корзину
+  status: pass
+  
+- summary: |
+    Проверка возможности добавления разных товаров в корзину
+  status: pass
+
+- summary: |
+    Проверка отчистки определенного товара из корзины 
+  status: pass
+  
+- summary: |
+    Проверка отчистки всего списка корзины 
+  status: pass
+
+- summary: |
+   Проверка возврата из корзины в каталог магазина
+  status: pass 
+
+- summary: |
+    Проверка успешного оформления заказа
+  status: pass
+  
+- summary: |
+    Проверка навигации по страницам каталога
+  status: pass
+
+- summary: |
+    Проверка отображения товаров по хештегу
   status: fail
+  
+- summary: |
+    Проверка фильтрации товаров с отрицательной ценой
+  status: fail
+  
+- summary: |
+    Проверка адаптивности сайта
+  status: pass
+  
+- summary: |
+    Проверка скорости загрузки страницы сайта
+  status: pass
+
+- summary: |
+    Проверка кроссбраузерности сайта 
+  status: pass
+  
+- summary: |
+    Проверка Мультиязычности сайта. Отображение на русском языке 
+  status: fail
+  
+- summary: |
+    Проверка Мультиязычности сайта. Отображение на английском языке
+  status: pass 
+
+- summary: |
+   Проверка оплаты заказа на сайте
+  status: fail 
+  
+- summary: |
+    Проверка информации о товаре в каталоге
+  status: pass
+
+- summary: |
+    Проверка информации в карточке товара 
+  status: pass
+  
+- summary: |
+    Изменение кол-ва товара на странице каталога 
+  status: fail
+  
+- summary: |
+    Изменение кол-ва  в карточке товара
+  status: fail 
+
+- summary: |
+   Неудачная попытка пользователя редактировать информацию о товаре в карточке продукта
+  status: pass   
