--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Поиск товара не работает на русском языке 
+    Проверка поиска товара в строке поиска по общему наименованию 
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
@@ -14,14 +14,100 @@
     Выводится информация "Ничего не найдено"
 
 - summary: |
-    На русском языке название и описание товара не переводится на русский
+    Проверка возможности уменьшения товара в корзине
   environment: |
     Версия 130.0.6723.70 (Официальная сборка), (64 бит)
     ОС Windows 10 
   steps-to-reproduce: |
     Зайти на сайт https://hexlet-products-store.vercel.app
-    В навигационной панели выбрать русский язык
+    Добавить один товар в корзину 3 шт
+    В навигационной панели перейти в cart
+    Напротив выбранного товара кнопкой уменьшить кол-во с 3 до 1
   expected-result: |
-    На главной странице сайта должен отображаться перечень товаров, описание каждого из них на русском языке
+    В корзине должен отображаться товар в кол-ве 1 шт
   actual-result: |
-    Описание товаров осталось на английском
+    Нет кнопки уменьшить кол-во товара в корзине. 
+
+- summary: |
+    Проверка отображения товаров по хештегу
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Зайти в карточку любого товара, например, Gucci Bloom
+    Сверху названия продукта нажать на хештег
+  expected-result: |
+    Сайт отображает товары связанные с хештегом #fragrances
+  actual-result: |
+    Переход на страницу с группой товаров по хештегу НЕ происходит 
+
+- summary: |
+    Проверка фильтрации товаров с отрицательной ценой
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    В фильтре Price  в значении Form внести отриуцательное значение, например, -5
+    В фильтре Price  в значении To внести положительное значение, например, 2
+  expected-result: |
+    Не удалось ввести отрицательное значение в фильтр цен. Фильрация не срабатывает
+  actual-result: |
+    Удается внести отрицательное значение, фильтр отрабатывает
+
+- summary: |
+    Проверка Мультиязычности сайта. Отображение на русском языке
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Нажимаем "Language" в шапке сайта
+    Выбираем язык "Russian" из выпадающего меню
+  expected-result: |
+    Интерфейс и элементы сайта отображаются корректно на русском языке, а также название и описание в карточках товаров
+  actual-result: |
+    Описание товара остается на английском языке
+
+- summary: |
+    Проверка оплаты заказа на сайте
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Добавить любые товары в корзину
+    В навигационной панели перейти в корзину
+    Нажимаем "Checkout"
+  expected-result: |
+    В появившемся окне об успешном оформлении заказа нажимаем "Payment", пользователь попадает в окно оплаты заказ
+  actual-result: |
+    Нет такой кнопки Payment, заказ оплатить невозможно
+
+- summary: |
+    Изменение кол-ва товара на странице каталога
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Нажать Add to cart один раз напротив любого товара, например, Red Lipstick (текущий остаток 68 шт)
+ expected-result: |
+    Кол-во товара изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
+  actual-result: |
+    Не меняется кол-во товара на странице каталога, в корзине товар добавился
+
+- summary: |
+    Изменение кол-ва в карточке товара
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Выбрать товар и перейти в карточку товарана, пример, Red Lipstick (текущий остаток 68 шт)
+    Нажать Add to cart один раз
+ expected-result: |
+    Кол-во товара изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
+  actual-result: |
+    Не меняется кол-во товара в карточке товара, в корзине товар добавился
