--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,113 +1,128 @@
 ---
 - summary: |
-    Проверка поиска товара в строке поиска по общему наименованию 
-  environment: |
-    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
-    ОС Windows 10 
-  steps-to-reproduce: |
-    Зайти на сайт https://hexlet-products-store.vercel.app
-    В навигационной панели выбрать русский язык
-    В строке поиска вводим "корм для кошек" 
-  expected-result: |
-    Должен отобразиться корм для кошек CAT FOOD
-  actual-result: |
-    Выводится информация "Ничего не найдено"
+    Проверка поиска товара в строке поиска по бренду
+  status: pass
 
 - summary: |
-    Проверка возможности уменьшения товара в корзине
-  environment: |
-    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
-    ОС Windows 10 
-  steps-to-reproduce: |
-    Зайти на сайт https://hexlet-products-store.vercel.app
-    Добавить один товар в корзину 3 шт
-    В навигационной панели перейти в cart
-    Напротив выбранного товара кнопкой уменьшить кол-во с 3 до 1
-  expected-result: |
-    В корзине должен отображаться товар в кол-ве 1 шт
-  actual-result: |
-    Нет кнопки уменьшить кол-во товара в корзине. 
+    Проверка поиска товара в строке поиска по общему наименованию
+  status: fail
+
+- summary: |
+    Проверка фильтрации каталога товаров по категории 
+  status: pass
+
+- summary: |
+    Проверка поиска товара через выбор категории и строку поиска
+  status: pass
+
+- summary: |
+    Проверка поиска товаров через фильтр по цене
+  status: pass
+
+- summary: |
+    Проверка поиска товаров через фильтр по наличию
+  status: pass  
+
+- summary: |
+    Проверка фильтрации по бренду
+  status: pass  
+
+- summary: |
+    Проверка фильтрации по нескольким брендам
+  status: pass    
+
+- summary: |
+    Проверка возможности просмотра информации о товаре
+  status: pass 
+
+- summary: |
+    Проверка возможности добавления товара в корзину с каталога
+  status: pass 
+
+- summary: |
+    Проверка возможности добавления товара в корзину с карточки товара
+  status: pass 
+
+- summary: |
+   Проверка возможности уменьшения товара в корзине
+  status: fail 
+
+- summary: |
+    Проверка возможности добавления одинаковых товаров в корзину
+  status: pass
+  
+- summary: |
+    Проверка возможности добавления разных товаров в корзину
+  status: pass
+
+- summary: |
+    Проверка отчистки определенного товара из корзины 
+  status: pass
+  
+- summary: |
+    Проверка отчистки всего списка корзины 
+  status: pass
+
+- summary: |
+   Проверка возврата из корзины в каталог магазина
+  status: pass 
+
+- summary: |
+    Проверка успешного оформления заказа
+  status: pass
+  
+- summary: |
+    Проверка навигации по страницам каталога
+  status: pass
 
 - summary: |
     Проверка отображения товаров по хештегу
-  environment: |
-    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
-    ОС Windows 10 
-  steps-to-reproduce: |
-    Зайти на сайт https://hexlet-products-store.vercel.app
-    Зайти в карточку любого товара, например, Gucci Bloom
-    Сверху названия продукта нажать на хештег
-  expected-result: |
-    Сайт отображает товары связанные с хештегом #fragrances
-  actual-result: |
-    Переход на страницу с группой товаров по хештегу НЕ происходит 
-
+  status: fail
+  
 - summary: |
     Проверка фильтрации товаров с отрицательной ценой
-  environment: |
-    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
-    ОС Windows 10 
-  steps-to-reproduce: |
-    Зайти на сайт https://hexlet-products-store.vercel.app
-    В фильтре Price  в значении Form внести отриуцательное значение, например, -5
-    В фильтре Price  в значении To внести положительное значение, например, 2
-  expected-result: |
-    Не удалось ввести отрицательное значение в фильтр цен. Фильрация не срабатывает
-  actual-result: |
-    Удается внести отрицательное значение, фильтр отрабатывает
+  status: fail
+  
+- summary: |
+    Проверка адаптивности сайта
+  status: pass
+  
+- summary: |
+    Проверка скорости загрузки страницы сайта
+  status: pass
 
 - summary: |
-    Проверка Мультиязычности сайта. Отображение на русском языке
-  environment: |
-    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
-    ОС Windows 10 
-  steps-to-reproduce: |
-    Зайти на сайт https://hexlet-products-store.vercel.app
-    Нажимаем "Language" в шапке сайта
-    Выбираем язык "Russian" из выпадающего меню
-  expected-result: |
-    Интерфейс и элементы сайта отображаются корректно на русском языке, а также название и описание в карточках товаров
-  actual-result: |
-    Описание товара остается на английском языке
+    Проверка кроссбраузерности сайта 
+  status: pass
+  
+- summary: |
+    Проверка Мультиязычности сайта. Отображение на русском языке 
+  status: fail
+  
+- summary: |
+    Проверка Мультиязычности сайта. Отображение на английском языке
+  status: pass 
 
 - summary: |
-    Проверка оплаты заказа на сайте
-  environment: |
-    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
-    ОС Windows 10 
-  steps-to-reproduce: |
-    Зайти на сайт https://hexlet-products-store.vercel.app
-    Добавить любые товары в корзину
-    В навигационной панели перейти в корзину
-    Нажимаем "Checkout"
-  expected-result: |
-    В появившемся окне об успешном оформлении заказа нажимаем "Payment", пользователь попадает в окно оплаты заказ
-  actual-result: |
-    Нет такой кнопки Payment, заказ оплатить невозможно
+   Проверка оплаты заказа на сайте
+  status: fail 
+  
+- summary: |
+    Проверка информации о товаре в каталоге
+  status: pass
 
 - summary: |
-    Изменение кол-ва товара на странице каталога
-  environment: |
-    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
-    ОС Windows 10 
-  steps-to-reproduce: |
-    Зайти на сайт https://hexlet-products-store.vercel.app
-    Нажать Add to cart один раз напротив любого товара, например, Red Lipstick (текущий остаток 68 шт)
- expected-result: |
-    Кол-во товара изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
-  actual-result: |
-    Не меняется кол-во товара на странице каталога, в корзине товар добавился
+    Проверка информации в карточке товара 
+  status: pass
+  
+- summary: |
+    Изменение кол-ва товара на странице каталога 
+  status: fail
+  
+- summary: |
+    Изменение кол-ва  в карточке товара
+  status: fail 
 
 - summary: |
-    Изменение кол-ва в карточке товара
-  environment: |
-    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
-    ОС Windows 10 
-  steps-to-reproduce: |
-    Зайти на сайт https://hexlet-products-store.vercel.app
-    Выбрать товар и перейти в карточку товарана, пример, Red Lipstick (текущий остаток 68 шт)
-    Нажать Add to cart один раз
- expected-result: |
-    Кол-во товара изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
-  actual-result: |
-    Не меняется кол-во товара в карточке товара, в корзине товар добавился
+   Неудачная попытка пользователя редактировать информацию о товаре в карточке продукта
+  status: pass   
