--- a/bugreports.yml
+++ b/bugreports.yml
@@ -126,3 +126,5 @@
 - summary: |
    Неудачная попытка пользователя редактировать информацию о товаре в карточке продукта
   status: pass   
+
+bugreports: []
