--- a/bugreports.yml
+++ b/bugreports.yml
@@ -1,128 +1,112 @@
----
 - summary: |
-    Проверка поиска товара в строке поиска по бренду
-  status: pass
+    Поиск товара не работает на русском языке 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    В навигационной панели выбрать русский язык
+    В строке поиска вводим "корм для кошек" 
+  expected-result: |
+    Должен отобразиться корм для кошек CAT FOOD
+  actual-result: |
+    На странице отображается надпись "Ничего не найдено", товар не выводится на экран
 
 - summary: |
-    Проверка поиска товара в строке поиска по общему наименованию
-  status: fail
+    Проверка возможности уменьшения товара в корзине
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Добавить любой товар Red Lipstick в корзину, нажатием Add to cart три раза
+    Перейти в корзину
+  expected-result: |
+    В корзине напротив товара Red Lipstick нажать кнопку  "Delete" 2 раза, кол-во товара в корзине уменьшится до 1
+  actual-result: |
+    Нет кнопки "Delete", уменьшить кол-во товара в корзине невозможно
+    
+- summary: |
+    Проверка отображения товаров по хештегу 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Выбратть товар "Gucci Bloom" и перейти в его карточку
+    Перейти по хештегу #fragrances
+  expected-result: |
+    Сайт отображает товары связанные с хештегом #fragrances
+  actual-result: |
+    Остается страница с товаром "Gucci Bloom"
 
 - summary: |
-    Проверка фильтрации каталога товаров по категории 
-  status: pass
+    Проверка фильтрации товаров с отрицательной ценой 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    В фильтре Price ввести отрицательное значение в поле "From"
+    В фильтре Price ввести положительное значение в поле "To"
+  expected-result: |
+    Не удалось ввести отрицательное значение в фильтр цен. Фильрация не срабатывает
+  actual-result: |
+    вводится отрицательное значение в поле 
 
-- summary: |
-    Проверка поиска товара через выбор категории и строку поиска
-  status: pass
-
-- summary: |
-    Проверка поиска товаров через фильтр по цене
-  status: pass
-
-- summary: |
-    Проверка поиска товаров через фильтр по наличию
-  status: pass  
-
-- summary: |
-    Проверка фильтрации по бренду
-  status: pass  
-
-- summary: |
-    Проверка фильтрации по нескольким брендам
-  status: pass    
-
-- summary: |
-    Проверка возможности просмотра информации о товаре
-  status: pass 
-
-- summary: |
-    Проверка возможности добавления товара в корзину с каталога
-  status: pass 
-
-- summary: |
-    Проверка возможности добавления товара в корзину с карточки товара
-  status: pass 
-
-- summary: |
-   Проверка возможности уменьшения товара в корзине
-  status: fail 
-
-- summary: |
-    Проверка возможности добавления одинаковых товаров в корзину
-  status: pass
-  
-- summary: |
-    Проверка возможности добавления разных товаров в корзину
-  status: pass
-
-- summary: |
-    Проверка отчистки определенного товара из корзины 
-  status: pass
-  
-- summary: |
-    Проверка отчистки всего списка корзины 
-  status: pass
-
-- summary: |
-   Проверка возврата из корзины в каталог магазина
-  status: pass 
-
-- summary: |
-    Проверка успешного оформления заказа
-  status: pass
-  
-- summary: |
-    Проверка навигации по страницам каталога
-  status: pass
-
-- summary: |
-    Проверка отображения товаров по хештегу
-  status: fail
-  
-- summary: |
-    Проверка фильтрации товаров с отрицательной ценой
-  status: fail
-  
-- summary: |
-    Проверка адаптивности сайта
-  status: pass
-  
-- summary: |
-    Проверка скорости загрузки страницы сайта
-  status: pass
-
-- summary: |
-    Проверка кроссбраузерности сайта 
-  status: pass
-  
 - summary: |
     Проверка Мультиязычности сайта. Отображение на русском языке 
-  status: fail
-  
-- summary: |
-    Проверка Мультиязычности сайта. Отображение на английском языке
-  status: pass 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Нажимаем "Language" в шапке сайта
+    Выбираем язык "Russian" из выпадающего меню"
+  expected-result: |
+    Интерфейс и элементы сайта отображаются корректно на русском языке, а также название и описание в карточках товаров
+  actual-result: |
+    Меняется только интерфейс, описание товара остается на английском языке
 
 - summary: |
-   Проверка оплаты заказа на сайте
-  status: fail 
-  
-- summary: |
-    Проверка информации о товаре в каталоге
-  status: pass
+    Проверка оплаты заказа на сайте 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    Добавляем любые товары в корзину
+    Переходим в корзину
+    Нажимаем "Checkout"
+    В появившемся окне об успешном оформлении заказа нажимаем "Payment"
+  expected-result: |
+    В появившемся окне об успешном оформлении заказа нажимаем "Payment"
+  actual-result: |
+   Появляется окно об успешном оформлении заказа, кнопки "Payment" нет. ЕСть возможность только закрыть заказ
 
-- summary: |
-    Проверка информации в карточке товара 
-  status: pass
-  
 - summary: |
     Изменение кол-ва товара на странице каталога 
-  status: fail
-  
-- summary: |
-    Изменение кол-ва  в карточке товара
-  status: fail 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    В каталоге на товаре нажимаем add to cart один раз, например, Red Lipstick (текущий остаток 68 шт)
+  expected-result: |
+    Кол-во товара в каталоге изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
+  actual-result: |
+    Кол-во товара не изменилось, в корзине увеличилось кол-во товара на 1 единицу
 
 - summary: |
-   Неудачная попытка пользователя редактировать информацию о товаре в карточке продукта
-  status: pass   
+    Изменение кол-ва  в карточке товара 
+  environment: |
+    Версия 130.0.6723.70 (Официальная сборка), (64 бит)
+    ОС Windows 10 
+  steps-to-reproduce: |
+    Зайти на сайт https://hexlet-products-store.vercel.app
+    В каталоге на товаре нажимаем на товар Red Lipstick (текущий остаток 68 шт)
+    В карточке товара нажимаем add to cart один раз
+  expected-result: |
+    Кол-во товара в карточке изменится на 67 шт, в корзине увеличится кол-во товара на 1 единицу
+  actual-result: |
+    Кол-во товара в карточке не изменилось, в корзине увеличилось кол-во товара на 1 единиц
